# dp-prefect-poc

./: .gitignore  Makefile  api_flow-deployment.yaml  autodeploy.py  gh-deployment.yaml  pyproject.toml  start_local_agent.py
dbt-poc/: Dockerfile
prefect_poc/: __init__.py
prefect_poc/blocks/: gcp.py  poc_github.py
prefect_poc/deployment_configs/: test_yaml_flow.deployment.yaml
prefect_poc/deployments/: poc_github.py
tests/: test_bronzelogic.py
utilities/: bronzelogic.py
utilitites/: bronzelogic.py
workflows/: bronzelogic.py  oep.py  pocflow.py  testflow_noimport.py  wait_flow.py
