[tool.poetry]
name = "prefectpoc"
version = "0.1.0"
description = ""
authors = ["jan.malek <jan.malek@ki-insurance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = { version = "^2.10.21", extras = ["all"] }
pydantic = { version = "<2.0.0" }
prefect-gcp = "^0.4.1"
dbt-postgres = "^1.5.2"
dbt-bigquery = "^1.5.3"
pytest = "^7.4.0"
hypothesis = "^6.82.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

