[tool.poetry]
name = "prefectpoc"
version = "0.1.0"
description = ""
authors = ["jan.malek <jan.malek@ki-insurance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = { version = "^2.8.7", extras = ["all"] }
prefect-gcp = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

